--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corporis quod, officia aliquam consectetur dolorum placeat suscipit dignissimos, itaque praesentium sequi quam cumque dolorem soluta, vero excepturi. Corporis, commodi dolorum.</p>
+    <h2>Lorem ipsum dolor sit.</h2>
 </body>
 </html>
