modifique el index

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Github pages</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corporis quod, officia aliquam consectetur dolorum placeat suscipit dignissimos, itaque praesentium sequi quam cumque dolorem soluta, vero excepturi. Corporis, commodi dolorum.</p>
-    <h2>Lorem ipsum dolor sit.</h2>
+    <h1>Mi pagina funcionando con githubpage</h1>
 </body>
 </html>
